# ai_test_tool

./: README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: update-doc.prompt.md
src/: main.py
src/ai_test_tool/: __init__.py
src/core/: __init__.py  batch_reporting.py  config.py  logger.py  runner.py
src/tests/: __init__.py  base_strategy.py  niah_test.py
src/ui/: __init__.py  app.py  components.py
tests/: conftest.py
tests/test_core/: test_batch_reporting.py  test_config.py  test_runner.py  test_sanity.py
tests/test_eval_strategies/: test_base_strategy.py  test_niah_test.py
tests/test_ui/: test_app.py  test_niah_panel.py
